--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  password: <%= ENV["PASSWORD"] %>
+  username: postgres
+  password: 615243
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
