--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
+  <<: *default
   database: ror_project_development
 
   # The specified database role being used to connect to postgres.
@@ -57,6 +58,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  <<: *default
   database: ror_project_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -80,6 +82,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
+  <<: *default
   database: ror_project_production
   username: ror_project
   password: <%= ENV["ROR_PROJECT_DATABASE_PASSWORD"] %>
