--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  password: 615243
+  username: postgres
 
   #password: <%= ENV["PASSWORD"] %>
   # For details on connection pooling, see Rails configuration guide
